[tool.poetry]
name = "yachiyoai"
version = "0.1.0"
description = ""
authors = ["drayee <1473443474@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.3.2"
langchain = "^1.2.14"
langgraph = "^1.1.4"
langgraph-cli = "^0.4.19"
langsmith = "^0.7.24"
langchain-openai = "^1.1.12"
psycopg2-binary = "^2.9.11"
peewee = "^4.0.3"
python-dotenv = "^1.2.2"
fastapi = "^0.135.3"
uvicorn = "^0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
