[tool.poetry]
name = "yachiyoai"
version = "0.1.0"
description = ""
authors = ["drayee <1473443474@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.3.2"
langchain = "^1.2.14"
langgraph = {extras = ["postgres"], version = "^1.1.6"}
langgraph-cli = "^0.4.19"
langsmith = "^0.7.24"
langchain-openai = "^1.1.12"
psycopg2-binary = "^2.9.11"
peewee = "^4.0.4"
python-dotenv = "^1.2.2"
fastapi = "^0.135.3"
uvicorn = "^0.42.0"
ipython = "^9.12.0"
psycopg-pool = "^3.3.0"
psycopg = {extras = ["binary"], version = "^3.3.3"}
langgraph-checkpoint-postgres = "^3.0.5"
prometheus-client = "^0.24.1"
notebook = "^7.5.5"
graphviz = "^0.21"
pygraphviz = "^1.14"
langchain-postgres = "^0.0.17"
ipynbname = "^2025.8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
